# Website

./: .gitignore  AGENTS.md  CNAME  CreateEntry.bat  CymaSpacesnipeIT.html  CynaSpacesnipeIT.html  GEMINI.md  LICENSE  ManageContent.bat  README.md  ScanUniverse.bat  ScanUniverse.ps1  StartUploader.bat  StartUploader.sh  background.js  build_background.py  clean-emojis.js  clean_extracted_desktop.json  clean_extracted_new.json  generator.html  improvements.md  index.html  index2.html  indexScript.js  indexScriptBabel.js  manifest.json  package-lock.json  package.json  randomColors.js  rebuild.py  robots.txt  sitemap.xml  style.css  style2.css  svg_receiver.py  videoLoader.js  vite.config.js
.claude/: settings.local.json
.github/workflows/: deploy.yml
3Dprints/: patchXRlogo.3mf
CollegeCourses/CreativeCodingCapstone/: ESP32PWM.html
CollegeCourses/MathInArts/: Unmasking.html  UnmaskingPureJS.js
CollegeCourses/web1/: index.html
CollegeCourses/web2/: index.html
ColorChange/: index.html
CyberDeck/: camera.js  content.js  index.html  poses.js  read_statement.py  script.js  style.css
CyberDeck/CyberdeckResources/: CyberDeck Application Ver2.docx
ESP32Codes/: GEMINI.md
Glue/: launch_antigravity.bat  register_all_convs.py
MiniProjects/: index.html  index.php  style.css
ParametricModeling/: AGENTS.md  gemini.md  index.html  serve_exploration.py  style.css
ParametricPCB/: AGENTS.md  package.json
Projects/: index.html
Work/Crossroad/: LICENSE  (+2 more)
controlH/: AR.html
legacy/: CreateEntry.bat  RegenerateBackground.bat  index.html  rebuild.py
output/firmware-multitarget/blending-fastled/PORTED_FIRMWARE/: CMakeLists.txt  README.md  flash.sh  main.c
output/firmware-multitarget/inmp441-hardcoded/PORTED_FIRMWARE/: CMakeLists.txt  README.md  flash.sh  main.c
output/firmware-multitarget/midi-led-brace/PORTED_FIRMWARE/: CMakeLists.txt  README.md  flash.sh  main.c
output/firmware-multitarget/oled-strip-test/PORTED_FIRMWARE/: CMakeLists.txt  README.md  flash.sh  main.c
output/firmware-multitarget/pico-mic/PORTED_FIRMWARE/: CMakeLists.txt  README.md  flash.sh  main.c
public/: CNAME  sitemap.xml
src/: index.html
(+2762 files in other folders)
