cmake_minimum_required(VERSION 3.13)
include(pico_sdk_import.cmake)
project(midi_led_brace C CXX ASM)
pico_sdk_init()
add_executable(midi_led_brace main.c)
pico_generate_pio_header(midi_led_brace ${CMAKE_CURRENT_LIST_DIR}/ws2812.pio)
target_link_libraries(midi_led_brace pico_stdlib hardware_pio tinyusb_device tinyusb_board)
pico_add_extra_outputs(midi_led_brace)
