cmake_minimum_required(VERSION 3.13)
include(pico_sdk_import.cmake)
project(oled_strip C CXX ASM)
pico_sdk_init()
add_executable(oled_strip main.c)
pico_generate_pio_header(oled_strip ${CMAKE_CURRENT_LIST_DIR}/ws2812.pio)
target_link_libraries(oled_strip pico_stdlib hardware_i2c hardware_pio)
pico_add_extra_outputs(oled_strip)
