cmake_minimum_required(VERSION 3.13)
include(pico_sdk_import.cmake)
project(pico_mic C CXX ASM)
pico_sdk_init()
add_executable(pico_mic main.c)
pico_generate_pio_header(pico_mic ${CMAKE_CURRENT_LIST_DIR}/ws2812.pio)
target_link_libraries(pico_mic pico_stdlib hardware_pio)
pico_add_extra_outputs(pico_mic)
